[gd_scene load_steps=10 format=3 uid="uid://dy4g1r5f41u1f"]

[ext_resource type="PackedScene" path="res://scenes/player/PlayerBody.tscn" id="1_uct3c"]
[ext_resource type="Script" path="res://scripts/player/player.gd" id="2_u388c"]
[ext_resource type="PackedScene" path="res://scenes/weapons/WeaponManager.tscn" id="3_nzgfh"]
[ext_resource type="PackedScene" path="res://scenes/camera/PlayerCamera.tscn" id="4_1h2tp"]
[ext_resource type="AudioStream" path="res://audio/footsteps/footstep_concrete_000.ogg" id="5_w7ujx"]

[node name="Player" type="CharacterBody3D"]
script=ExtResource("2_u388c")
speed=8.0
max_health=120.0

[node name="HealthHUDRelay" type="Node" parent="." index="5"]

[node name="SignalBridge" type="Node" parent="." index="6"]

[connection signal="health_changed" from="." to="../HUD" method="on_player_health_changed"]
[connection signal="died" from="." to="../HUD" method="on_player_died"]

[node name="Body" parent="." index="0" instance=ExtResource("1_uct3c")]

[node name="CameraRoot" parent="." index="1" instance=ExtResource("4_1h2tp")]

[node name="WeaponManager" parent="." index="2" instance=ExtResource("3_nzgfh")]

[node name="FootstepPlayer" type="AudioStreamPlayer3D" parent="." index="3"]
stream=ExtResource("5_w7ujx")
unit_size=0.5
bus="SFX"

[node name="Hitbox" type="Area3D" parent="." index="4"]
collision_layer=2
collision_mask=4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox" index="0"]
shape=CapsuleShape3D(radius=0.6, height=1.2)

[node name="Health" type="Node" parent="." index="5"]